--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,9 @@
+
+
 /* General Styles */
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -24,6 +27,7 @@ body {
   
   h1 {
     margin-left: 1em;
+    font-weight: 100;
   }
   
   nav ul {
