--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -19,6 +19,10 @@ header {
     background-color: #333;
     color: white;
 }
+main {
+    flex: 1;
+    padding: 20px;
+}
 
 .logo img {
     border-radius: 50%;
